objects/vlocity_ins__ContextMapping__c.object
<CustomObject>
    <description>Defines the mapping between a context dimension and the &quot;ActiveContext&quot; which is an in-memory instance of user context.</description>
    <fields>
        <fullName>vlocity_ins__ContextScopeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Scope</label>
        <referenceTo>vlocity_ins__ContextScope__c</referenceTo>
        <relationshipLabel>Vlocity Context Mappings</relationshipLabel>
        <relationshipName>VlocityContextMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Destination__c</fullName>
        <description>Destination (Obj.Variable format) where the dimension data is being assigned to (e.g. AppContext.Channel,AppContext.Segment). Destination will always be AppContext.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimension variable</description>
        <label>Context Dimension</label>
        <referenceTo>vlocity_ins__ContextDimension__c</referenceTo>
        <relationshipName>Context_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FunctionExpression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Function Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FunctionJSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FunctionJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this context mapping. Used to identify the context mapping across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique context mapping identifier can be used.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__InitializationPolicy__c</fullName>
        <label>Initialization Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Reinitialize</fullName>
                </value>
                <value>
                    <fullName>Always Reinitialize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__InitializationType__c</fullName>
        <label>Initialization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scope SObject</fullName>
                </value>
                <value>
                    <fullName>Source Expression</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Type In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Scope__c</fullName>
        <description>Scope where this mapping applies to App Context . eg Session, Order,OrderLineItem,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Scope</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Source__c</fullName>
        <description>Source expression to evaluate to load the dimension value ,before loading to runtime destination ( eg Order.Channel) . FUNCTIONS will also be supported,to be used when reading source values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TypeInValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeIn Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityFunctionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Function</label>
        <referenceTo>vlocity_ins__VlocityFunction__c</referenceTo>
        <relationshipLabel>Vlocity Context Mappings</relationshipLabel>
        <relationshipName>VlocityContextMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Context Mapping</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>